--- a/models/efficientdet_d1/pipeline.config
+++ b/models/efficientdet_d1/pipeline.config
@@ -179,7 +179,8 @@ train_input_reader: {
 eval_config: {
   metrics_set: "coco_detection_metrics"
   use_moving_averages: false
-  batch_size: 1;
+  batch_size: 1
+  num_visualizations: 40;
 }
 
 eval_input_reader: {
