add random black boxes augmentation

--- a/models/efficientdet_d1/pipeline.config
+++ b/models/efficientdet_d1/pipeline.config
@@ -143,6 +143,13 @@ train_config {
       scale_max: 2.0
     }
   }
+  data_augmentation_options {
+    random_black_patches {
+      max_black_patches: 6
+      probability: 0.5
+      size_to_image_ratio: 0.25
+    }
+  }
   sync_replicas: true
   optimizer {
     momentum_optimizer {
@@ -172,7 +179,7 @@ train_input_reader: {
   shuffle: true
   label_map_path: "annotations/label_map.pbtxt"
   tf_record_input_reader {
-    input_path: "annotations/train_cutout/train.record"
+    input_path: "annotations/train.record"
   }
 }
 
@@ -180,7 +187,7 @@ eval_config: {
   metrics_set: "coco_detection_metrics"
   use_moving_averages: false
   batch_size: 1
-  num_visualizations: 40;
+  num_visualizations: 40
 }
 
 eval_input_reader: {
